<resources>
    <string name="app_name">TestApplication</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="addrInvalid">Invalid email address</string>
    <string name="success">Login success</string>
    <string name="tooShort">The provided password is too short</string>
    <string name="passInavlid">The provided password is invalid</string>
</resources>

